--- a/index.html
+++ b/index.html
@@ -794,13 +794,13 @@
         </div>
         <div id="socials-container">
           <img
-            src="./assets/linkedin.png"
+            src="assets/linkedin.png"
             alt="My LinkedIn profile"
             class="icon"
             onclick="location.href='https://linkedin.com/in/theereshan-moodley-89b266288'"
           />
           <img
-            src="./assets/github.png"
+            src="assets/github.png"
             alt="My Github profile"
             class="icon"
             onclick="location.href='https://github.com/Theereshan'"
@@ -815,7 +815,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/about-pic.png"
+            src="assets/about-pic.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -824,7 +824,7 @@
           <div class="about-containers">
             <div class="details-container">
               <img
-                src="./assets/education.png"
+                src="assets/education.png"
                 alt="Education icon"
                 class="icon"
               />
@@ -833,7 +833,7 @@
             </div>
             <div class="details-container">
               <img
-                src="./assets/experience.png"
+                src="assets/experience.png"
                 alt="Experience icon"
                 class="icon"
               />
@@ -853,7 +853,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#experience'"
@@ -870,7 +870,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -881,7 +881,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -892,7 +892,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -903,7 +903,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -914,7 +914,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -925,7 +925,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -941,7 +941,7 @@
             <div class="article-container">
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -952,7 +952,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -963,7 +963,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -974,7 +974,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -985,7 +985,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -996,7 +996,7 @@
               </article>
               <article>
                 <img
-                  src="./assets/checkmark.png"
+                  src="assets/checkmark.png"
                   alt="Experience icon"
                   class="icon"
                 />
@@ -1010,7 +1010,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#projects'"
@@ -1069,7 +1069,7 @@
         </div>
       </div>
       <img
-        src="./assets/arrow.png"
+        src="assets/arrow.png"
         alt="Arrow icon"
         class="icon arrow"
         onclick="location.href='./#testimonials'"
@@ -1111,7 +1111,7 @@
         <div class="contact-info-section">
           <div class="contact-info-card">
             <img
-              src="./assets/email.png"
+              src="assets/email.png"
               alt="Email icon"
               class="icon"
             />
@@ -1122,7 +1122,7 @@
           </div>
           <div class="contact-info-card">
             <img
-              src="./assets/linkedin.png"
+              src="assets/linkedin.png"
               alt="LinkedIn icon"
               class="icon"
             />
@@ -1133,7 +1133,7 @@
           </div>
           <div class="contact-info-card">
             <img
-              src="./assets/github.png"
+              src="assets/github.png"
               alt="GitHub icon"
               class="icon"
             />
